--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=sershishkov
-PASSWORD=123456
+DATABASE=mongodb+srv://sershishkov:<PASSWORD>@cluster0-tkjhh.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=82EMANBPCuB5BLNx
