--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
