--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=3000
 DATABASE=mongodb+srv://sershishkov:<PASSWORD>@cluster0-tkjhh.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=82EMANBPCuB5BLNx
+
+JWT_SECRET=my-sh-secret-to-protect-my-perfect-project
+JWT_EXPIRES_IN=90d
