--- a/config.env
+++ b/config.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=82EMANBPCuB5BLNx
 
 JWT_SECRET=my-sh-secret-to-protect-my-perfect-project
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=eea3d7bb0fd25f
+EMAIL_PASSWORD=c57208c669e1c2
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
