--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD=82EMANBPCuB5BLNx
 
 JWT_SECRET=my-sh-secret-to-protect-my-perfect-project
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90    
 
 EMAIL_USERNAME=eea3d7bb0fd25f
 EMAIL_PASSWORD=c57208c669e1c2
