--- a/config.env
+++ b/config.env
@@ -13,3 +13,4 @@ EMAIL_USERNAME=eea3d7bb0fd25f
 EMAIL_PASSWORD=c57208c669e1c2
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
+EMAIL_FROM='ser.shishkov@gmail.com'
