--- a/config.env
+++ b/config.env
@@ -14,3 +14,6 @@ EMAIL_PASSWORD=c57208c669e1c2
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
 EMAIL_FROM='ser.shishkov@gmail.com'
+
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=somethingFromSendgrid
