--- a/config.env
+++ b/config.env
@@ -17,3 +17,6 @@ EMAIL_FROM='ser.shishkov@gmail.com'
 
 SENDGRID_USERNAME=apikey
 SENDGRID_PASSWORD=somethingFromSendgrid
+
+
+STRIPE_SECRET_KEY=sk_test_3uFeDYeZ3aAQdaY7Z2dy5Sdi00Y8yo7w8E
